basic html & css done, coding the contact

--- a/index.html
+++ b/index.html
@@ -1,14 +1,239 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wesley Liaw</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles.css" />
+    <script
+      src="https://kit.fontawesome.com/80f09bcac6.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="index.js" defer></script>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <section id="landing-page">
+      <nav>
+        <figure>
+          <img id="personal-logo" src="./assets/logo.jpg" alt="" />
+        </figure>
+        <ul class="nav__link--list">
+          <li class="nav__link">
+            <a
+              href=""
+              class="nav__link--anchor link__hover-effect link__Hover-effect--black"
+              >About</a
+            >
+          </li>
+          <li class="nav__link">
+            <a
+              href=""
+              class="nav__link--anchor link__hover-effect link__Hover-effect--black"
+              >Projects</a
+            >
+          </li>
+          <li class="nav__link">
+            <a
+              href=""
+              class="nav__link--anchor link__hover-effect link__Hover-effect--black"
+              >Contact</a
+            >
+          </li>
+          <li class="nav__link">
+            <i class="fa-solid fa-circle-half-stroke click"></i>
+          </li>
+        </ul>
+      </nav>
+
+      <header class="header">
+        <div class="header__content">
+          <h1 class="title">Hey</h1>
+          <h1 class="title text__emphasis">I'm Wesley.</h1>
+          <p class="header__para">
+            I'm a
+            <span class="text__emphasis">Frontend Software Engineer </span>
+            with a passion for bringing tech solutions to personal problems.
+            <br />
+            Here's a bit more <span class="text__emphasis"> about me</span>.
+          </p>
+          <div class="about-me__links">
+            <a
+              href="https://www.linkedin.com/in/wesleyliaw"
+              class="about-me__link click"
+              target="_blank"
+            >
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
+            <a
+              href="https://www.github.com/wesleyliaw777"
+              class="about-me__link click"
+              target="_blank"
+            >
+              <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="#" class="about-me__link click" target="_blank">
+              <i class="fa-solid fa-envelope"></i>
+            </a>
+            <a
+              href="./assets/Resume.pdf"
+              target="_blank"
+              class="about-me__link click"
+              target="_blank"
+            >
+              <i class="fa-solid fa-file-pdf"></i>
+            </a>
+          </div>
+        </div>
+      </header>
+      <button class="mail__btn click">
+        <i class="fas fa-envelope"></i>
+      </button>
+      <a href="#projects" class="scroll">
+        <div class="scroll__icon click"></div>
+      </a>
+      <div class="modal">
+        <div class="modal__half modal__about">
+            <h3 class="modal__title modal__title--about">Here's a bit about me.</h3>    
+            <h4 class="modal__sub-title modal__sub-title--about">Frontend Software Engineer.</h4>
+            <p class="modal__para">
+                I'm a
+                <span class="text__emphasis">Frontend Software Engineer </span>
+                with a passion for bringing tech solutions to personal problems.
+                <br>
+                Sell myself here.
+            </p>
+            <div class="modal__languages">
+                <figure class="modal__language">
+                    <img class="modal__language--img" src="./assets/html_img.png" alt="">
+                    <span class="language__name">HTML</span>
+                </figure>
+                <figure class="modal__language">
+                    <img class="modal__language--img" src="./assets/css_logo.png" alt="">
+                    <span class="language__name">CSS</span>
+                </figure>
+                <figure class="modal__language">
+                    <img class="modal__language--img" src="./assets/java_img.jpg" alt="">
+                    <span class="language__name">JavaScript</span>
+                </figure>
+                <figure class="modal__language">
+                    <img class="modal__language--img" src="./assets/c_img.png" alt="">
+                    <span class="language__name">C</span>
+                </figure>
+            </div>
+        </div>
+        <div class="modal__half modal__contact">
+            <h3 class="modal__title modal__title--contact">Let's have a chat!</h3>
+            <h4 class="modal__sub-title modal__sub-title--contact">I'm currently open to new opportunities.</h4>
+            <form action="" id="contact__form">
+                <div class="form__item">
+                    <label class="form__item--label">Name</label>
+                    <input type="text" class="input" name="user_name" type="text" required></input>
+                </div>
+                <div class="form__item">
+                    <label class="form__item--label">Email</label>
+                    <input type="text" class="input" name="user_email" type="email" required></input>
+                </div>
+                <div class="form__item">
+                    <label class="form__item--label">Message</label>
+                    <textarea type="text" class="input" name="message" required></textarea>
+                </div>
+            </form>
+        </div>
+      </div>
+    </section>
+
+    <section id="projects">
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title">
+            Here are some of my <span class="text__emphasis">projects</span>
+          </h1>
+
+          <ul class="project__list">
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/blinker mockup.png"
+                  alt=""
+                  class="project__img"
+                />
+                <div class="project__wrapper--bg"></div>
+                <div class="project__description">
+                  <h3 class="project__description--title">Car Sales Project</h3>
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JavaScript, Vue, Vuex
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Placeat at error delectus.
+                  </p>
+                  <div class="project__description--links">
+                    <a href="#" class="project__description--link">
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a href="#" class="project__description--link">
+                      <i class="fab fa-linkedin"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img src="" alt="" class="project__img" />
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img src="" alt="" class="project__img" />
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="container">
+        <div class="row footer__row">
+            <figure>
+              <img class="footer__logo--img" src="./assets/logo.jpg" alt="" />
+            </figure>
+            <div class="footer__social--list">
+              <a href="" class="
+              footer__social--link
+              link__hover-effect
+              link__hover-effect--white
+              ">
+                GitHub
+            </a>
+              <a href="" class="
+              footer__social--link
+              link__hover-effect
+              link__hover-effect--white
+              ">
+                LinkedIn
+            </a>
+              <a href="" class="
+              footer__social--link
+              link__hover-effect
+              link__hover-effect--white
+              ">
+                Contact
+            </a>
+            </a>
+              <a href="" class="
+              footer__social--link
+              link__hover-effect
+              link__hover-effect--white
+              ">
+                Resume
+            </a>
+            </div>
+            <div class="footer__copyright">Copyright © 2023 Wesley Liaw</div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
