--- a/index.html
+++ b/index.html
@@ -11,36 +11,41 @@
       crossorigin="anonymous"
     ></script>
     <script src="index.js" defer></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    </script>
+    <script type="text/javascript">(function(){emailjs.init("HJ5JXeS8A1SxJzJqd");})();
+</script>
   </head>
   <body>
-    <section id="landing-page">
+    <section id="landing-page" onmousemove="moveBackground(event)">
       <nav>
         <figure>
           <img id="personal-logo" src="./assets/logo.jpg" alt="" />
         </figure>
         <ul class="nav__link--list">
-          <li class="nav__link">
+          <li class="nav__link" onclick="toggleModal()">
             <a
-              href=""
+              href="#"
               class="nav__link--anchor link__hover-effect link__Hover-effect--black"
               >About</a
             >
           </li>
           <li class="nav__link">
             <a
-              href=""
+              href="#projects"
               class="nav__link--anchor link__hover-effect link__Hover-effect--black"
               >Projects</a
             >
           </li>
-          <li class="nav__link">
+          <li class="nav__link" onclick="toggleModal()">
             <a
-              href=""
+              href="#"
               class="nav__link--anchor link__hover-effect link__Hover-effect--black"
               >Contact</a
             >
           </li>
-          <li class="nav__link">
+          <li class="nav__link click" onclick="toggleContrast()">
             <i class="fa-solid fa-circle-half-stroke click"></i>
           </li>
         </ul>
@@ -55,7 +60,7 @@
             <span class="text__emphasis">Frontend Software Engineer </span>
             with a passion for bringing tech solutions to personal problems.
             <br />
-            Here's a bit more <span class="text__emphasis"> about me</span>.
+            Here's a bit more <span class="text__emphasis click" onclick="toggleModal()"> about me</span>.
           </p>
           <div class="about-me__links">
             <a
@@ -79,16 +84,17 @@
               href="./assets/Resume.pdf"
               target="_blank"
               class="about-me__link click"
-              target="_blank"
             >
               <i class="fa-solid fa-file-pdf"></i>
             </a>
           </div>
         </div>
       </header>
-      <button class="mail__btn click">
-        <i class="fas fa-envelope"></i>
-      </button>
+      <a href="#">
+        <button class="mail__btn click" onclick="toggleModal()">
+          <i class="fas fa-envelope"></i>
+        </button>
+      </a>
       <a href="#projects" class="scroll">
         <div class="scroll__icon click"></div>
       </a>
@@ -123,24 +129,41 @@
             </div>
         </div>
         <div class="modal__half modal__contact">
+            <i class="fas fa-times modal__exit click"  onclick="toggleModal()"></i>
             <h3 class="modal__title modal__title--contact">Let's have a chat!</h3>
             <h4 class="modal__sub-title modal__sub-title--contact">I'm currently open to new opportunities.</h4>
-            <form action="" id="contact__form">
+            <form action="" id="contact__form" onsubmit="contact(event)">
                 <div class="form__item">
                     <label class="form__item--label">Name</label>
                     <input type="text" class="input" name="user_name" type="text" required></input>
                 </div>
                 <div class="form__item">
                     <label class="form__item--label">Email</label>
-                    <input type="text" class="input" name="user_email" type="email" required></input>
+                    <input type="email" class="input" name="user_email" type="email" required></input>
                 </div>
                 <div class="form__item">
                     <label class="form__item--label">Message</label>
                     <textarea type="text" class="input" name="message" required></textarea>
                 </div>
+                <button id="contact__submit" class="form__submit">Send it my way!</button>
             </form>
+            <div class="modal__overlay modal__overlay--loading">
+              <i class="fas fa-spinner"></i>
+            </div>
+            <div class="modal__overlay modal__overlay--success">
+              Thanks for the message! Looking forward to speaking to you soon.
+            </div>
         </div>
       </div>
+      <img src="./assets/semi circle.svg" class="shape shape--0" alt="">
+      <img src="./assets/circle.svg" class="shape shape--1" alt="">
+      <img src="./assets/squiggly.svg" class="shape shape--2" alt="">
+      <img src="./assets/circle.svg" class="shape shape--3" alt="">
+      <img src="./assets/triangle.svg" class="shape shape--4" alt="">
+      <img src="./assets/circle.svg" class="shape shape--5" alt="">
+      <img src="./assets/squiggly.svg" class="shape shape--6" alt="">
+      <img src="./assets/circle.svg" class="shape shape--7" alt="">
+      <img src="./assets/semi circle.svg" class="shape shape--8" alt="">
     </section>
 
     <section id="projects">
@@ -181,14 +204,61 @@
             </li>
             <li class="project">
               <div class="project__wrapper">
-                <img src="" alt="" class="project__img" />
+                <img
+                  src="./assets/blinker mockup.png"
+                  alt=""
+                  class="project__img"
+                />
+                <div class="project__wrapper--bg"></div>
+                <div class="project__description">
+                  <h3 class="project__description--title">Car Sales Project</h3>
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JavaScript, Vue, Vuex
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Placeat at error delectus.
+                  </p>
+                  <div class="project__description--links">
+                    <a href="#" class="project__description--link">
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a href="#" class="project__description--link">
+                      <i class="fab fa-linkedin"></i>
+                    </a>
+                  </div>
+                </div>
               </div>
             </li>
             <li class="project">
               <div class="project__wrapper">
-                <img src="" alt="" class="project__img" />
+                <img
+                  src="./assets/blinker mockup.png"
+                  alt=""
+                  class="project__img"
+                />
+                <div class="project__wrapper--bg"></div>
+                <div class="project__description">
+                  <h3 class="project__description--title">Car Sales Project</h3>
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JavaScript, Vue, Vuex
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Placeat at error delectus.
+                  </p>
+                  <div class="project__description--links">
+                    <a href="#" class="project__description--link">
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a href="#" class="project__description--link">
+                      <i class="fab fa-linkedin"></i>
+                    </a>
+                  </div>
+                </div>
               </div>
             </li>
+            
           </ul>
         </div>
       </div>
@@ -215,7 +285,7 @@
               ">
                 LinkedIn
             </a>
-              <a href="" class="
+              <a href="#" onclick="toggleModal()" class="
               footer__social--link
               link__hover-effect
               link__hover-effect--white
