--- a/index.html
+++ b/index.html
@@ -103,28 +103,31 @@
             <h3 class="modal__title modal__title--about">Here's a bit about me.</h3>    
             <h4 class="modal__sub-title modal__sub-title--about">Frontend Software Engineer.</h4>
             <p class="modal__para">
-                I'm a
+                I'm a 23 year old Texan
                 <span class="text__emphasis">Frontend Software Engineer </span>
                 with a passion for bringing tech solutions to personal problems.
                 <br>
-                Sell myself here.
+                I've developed websites for businesses, e-commerce, and filtering movies with
+                <span class="text__emphasis">HTML</span>,
+                <span class="text__emphasis">CSS</span>, and
+                <span class="text__emphasis">JavaScript</span>.
             </p>
             <div class="modal__languages">
                 <figure class="modal__language">
-                    <img class="modal__language--img" src="./assets/html_img.png" alt="">
+                    <img class="modal__language--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="">
                     <span class="language__name">HTML</span>
                 </figure>
                 <figure class="modal__language">
-                    <img class="modal__language--img" src="./assets/css_logo.png" alt="">
+                    <img class="modal__language--img" src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png" alt="">
                     <span class="language__name">CSS</span>
                 </figure>
                 <figure class="modal__language">
-                    <img class="modal__language--img" src="./assets/java_img.jpg" alt="">
+                    <img class="modal__language--img" src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png" alt="">
                     <span class="language__name">JavaScript</span>
                 </figure>
                 <figure class="modal__language">
-                    <img class="modal__language--img" src="./assets/c_img.png" alt="">
-                    <span class="language__name">C</span>
+                    <img class="modal__language--img" src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png" alt="">
+                    <span class="language__name">React</span>
                 </figure>
             </div>
         </div>
