--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <p class="header__para">
             I'm a
             <span class="text__emphasis">Frontend Software Engineer </span>
-            with a passion for bringing tech solutions to personal problems.
+            with a passion for optimizing lifestyle and business with technology.
             <br />
             Here's a bit more <span class="text__emphasis click" onclick="toggleModal()"> about me</span>.
           </p>
@@ -107,7 +107,7 @@
                 <span class="text__emphasis">Frontend Software Engineer </span>
                 with a passion for bringing tech solutions to personal problems.
                 <br>
-                I've developed websites for businesses, e-commerce, and filtering movies with
+                I've developed websites for e-commerce and movie discovery with
                 <span class="text__emphasis">HTML</span>,
                 <span class="text__emphasis">CSS</span>, and
                 <span class="text__emphasis">JavaScript</span>.
