--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section id="landing-page" onmousemove="moveBackground(event)">
       <nav>
         <figure>
-          <img id="personal-logo" src="./assets/logo.jpg" alt="" />
+          <img id="personal-logo" src="./assets/logo.png" alt="" />
         </figure>
         <ul class="nav__link--list">
           <li class="nav__link" onclick="toggleModal()">
@@ -152,7 +152,7 @@
         <div class="modal__half modal__contact">
             <i class="fas fa-times modal__exit click"  onclick="toggleModal()"></i>
             <h3 class="modal__title modal__title--contact">Let's have a chat!</h3>
-            <h4 class="modal__sub-title modal__sub-title--contact">I'm currently open to new opportunities.</h4>
+            <h4 class="modal__sub-title modal__sub-title--contact">I'm <span class="text__emphasis">currently open</span> to new opportunities.</h4>
             <form action="" id="contact__form" onsubmit="contact(event)">
                 <div class="form__item">
                     <label class="form__item--label">Name</label>
@@ -206,10 +206,10 @@
                 <div class="project__description">
                   <h3 class="project__description--title">Netflix Clone</h3>
                   <h4 class="project__description--sub-title">
-                    HTML, CSS, JavaScript, Next.js, Material UI, Tailwind
+                    HTML, CSS, JavaScript, Next.js, Material UI, Tailwind CSS
                   </h4>
                   <p class="project__description--para">
-                    Built a fully responsive movie app where users can view various categories (Documentaries, Romance, Action) and see the trailers.
+                    Built a fully responsive movie app where users can view various categories (Documentaries, Romance, Action, etc) and see the trailers for each show/movie.
                   </p>
                   <div class="project__description--links">
                     <a href="https://github.com/WesleyLiaw777/netflix-clone" target="_blank" class="project__description--link">
@@ -225,26 +225,25 @@
             <li class="project">
               <div class="project__wrapper">
                 <img
-                  src="./assets/blinker mockup.png"
+                  src="./assets/spotify_bg.png"
                   alt=""
                   class="project__img"
                 />
                 <div class="project__wrapper--bg"></div>
                 <div class="project__description">
-                  <h3 class="project__description--title">Car Sales Project</h3>
+                  <h3 class="project__description--title">Spotify Clone</h3>
                   <h4 class="project__description--sub-title">
-                    HTML, CSS, JavaScript, Vue, Vuex
+                    HTML, CSS, JavaScript, React, Next Auth
                   </h4>
                   <p class="project__description--para">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Placeat at error delectus.
+                    Developed a fully responsive music player that leveraged the Spotify API to search and play songs from users' favorite artists.
                   </p>
                   <div class="project__description--links">
-                    <a href="#" class="project__description--link" target="_blank" >
+                    <a href="https://github.com/WesleyLiaw777/spotify-clone" class="project__description--link" target="_blank" >
                       <i class="fab fa-github"></i>
                     </a>
-                    <a href="#" class="project__description--link" target="_blank" >
-                      <i class="fab fa-linkedin"></i>
+                    <a href="https://splatify-player.vercel.app/" class="project__description--link" target="_blank" >
+                      <i class="fa-solid fa-link"></i>
                     </a>
                   </div>
                 </div>
@@ -253,26 +252,26 @@
             <li class="project">
               <div class="project__wrapper">
                 <img
-                  src="./assets/blinker mockup.png"
+                  src="./assets/disney_bg.png"
                   alt=""
                   class="project__img"
                 />
                 <div class="project__wrapper--bg"></div>
                 <div class="project__description">
-                  <h3 class="project__description--title">Car Sales Project</h3>
+                  <h3 class="project__description--title">Disney Plus Clone</h3>
                   <h4 class="project__description--sub-title">
-                    HTML, CSS, JavaScript, Vue, Vuex
+                    HTML, CSS, JavaScript, React
                   </h4>
                   <p class="project__description--para">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Placeat at error delectus.
+                    Created a fully responsive movie app using React, JavaScript, HTML, and CSS best practices.
+                    Fetched data from TMDB API to allow users to view trailer and additional information about movies/TV shows.
                   </p>
                   <div class="project__description--links">
-                    <a href="#" class="project__description--link" target="_blank" >
+                    <a href="https://github.com/WesleyLiaw777/disney_clone" class="project__description--link" target="_blank" >
                       <i class="fab fa-github"></i>
                     </a>
-                    <a href="#" class="project__description--link" target="_blank" >
-                      <i class="fab fa-linkedin"></i>
+                    <a href="https://disney-clone-henna.vercel.app/" class="project__description--link" target="_blank" >
+                      <i class="fa-solid fa-link"></i>
                     </a>
                   </div>
                 </div>
@@ -288,7 +287,7 @@
       <div class="container">
         <div class="row footer__row">
             <figure>
-              <img class="footer__logo--img" src="./assets/logo.jpg" alt="" />
+              <img class="footer__logo--img" src="./assets/logo.png" alt="" />
             </figure>
             <div class="footer__social--list">
               <a href="https://www.github.com/WesleyLiaw777" target="_blank" class="
